@@ -7,7 +7,25 @@
 
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
-    id 'application'
+    id "java"
+    id "application"
+    id "org.openjfx.javafxplugin" version "0.1.0"
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(26)
+    }
+}
+
+javafx {
+    version = "26"
+    modules = [ "javafx.controls", "javafx.web" ]
+}
+
+application {
+    // Define the main class for the application.
+    mainClass = 'blue.rose.App'
 }
 
 repositories {
@@ -23,21 +41,30 @@ dependencies {
 
     // This dependency is used by the application.
     implementation libs.guava
+
+    implementation "org.openjfx:javafx-controls:26"
+    implementation "org.openjfx:javafx-web:26"
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-application {
-    // Define the main class for the application.
-    mainClass = 'blue.rose.App'
-}
+// tasks.named("distTar").configure { enabled = false }
+// tasks.named("distZip").configure { enabled = false }
+// tasks.named("startScripts").configure { enabled = false }
 
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+tasks.named("run", JavaExec) {
+    doFirst {
+        def nativeDir = file("$buildDir/NativeMain/RuntimeLibs/windows/x86-64/shared")
+
+        jvmArgs += [
+            "-Djava.library.path=${nativeDir.absolutePath}",
+            "--module-path", classpath.asPath,
+            "--add-modules", "javafx.controls,javafx.web"
+        ]
+
+        environment "PATH", nativeDir.absolutePath + ";" + System.getenv("PATH")
+    }
 }
